@@ -1,0 +1,18 @@
+require File.dirname(__FILE__) + '/../test_helper'
+require 'comment_controller'
+
+# Re-raise errors caught by the controller.
+class CommentController; def rescue_action(e) raise e end; end
+
+class CommentControllerTest < Test::Unit::TestCase
+  def setup
+    @controller = CommentController.new
+    @request    = ActionController::TestRequest.new
+    @response   = ActionController::TestResponse.new
+  end
+
+  # Replace this with your real tests.
+  def test_truth
+    assert true
+  end
+end
